<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SenderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="407dp"
        android:layout_height="847dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/generated_qr"
            android:layout_width="184dp"
            android:layout_height="179dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="228dp"
            android:contentDescription="@string/generated_qr_code_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sender_next_button"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/list_selector_background" />

        <EditText
            android:id="@+id/editTextName"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/name_label"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sender_data" />

        <EditText
            android:id="@+id/editTextSurname"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/surname_label"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextStreet"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="170dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="Ulica"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

        <TextView
            android:id="@+id/sender_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:text="@string/sender_data_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sender_next_button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/next_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextStreet" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/smaller_address_hint_text"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextStreet" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="Kod pocztowy"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextStreet"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

        <ImageButton
            android:id="@+id/sender_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="Telefon"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextCity"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />

        <CheckBox
            android:id="@+id/sendReceiptcheckBox"
            android:layout_width="167dp"
            android:layout_height="66dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="17dp"
            android:text="Chcę otrzymać potwierdzenie nadania"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>